[package]
name = "pomodoro"
version = "0.1.0"
description = "Pomodoro cli for focus, break sessions in our terminal"
authors = ["jobin_nelson <jobinnelson369@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
rand = "0.10.1"
ratatui = "0.30.0"
tokio = { version = "1.40.0", features = ["full"] }

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
